# Durable-Serverless-Starter

./: .gitignore  INSTALL.md  README.md  SETUP.md  aws_requirements.txt  main.py  pyproject.toml  serverless.yml  start_workflow.py
